# atglib

./: .gitignore  CHANGELOG.md  Cargo.toml  JUSTFILE  README.md
benches/: genepred.rs  gtf.rs
src/: lib.rs
src/bed/: writer.rs
src/fasta/: reader.rs  writer.rs
src/genepred/: writer.rs
src/genepredext/: reader.rs  writer.rs
src/gtf/: reader.rs  record.rs  writer.rs
src/models/: aminoacid.rs  codon.rs  exon.rs  frame.rs  genetic_code.rs  mod.rs  sequence.rs  transcript.rs  transcripts.rs  utils.rs
src/qc/: mod.rs  writer.rs
src/refgene/: reader.rs  writer.rs
src/spliceai/: mod.rs  writer.rs
src/tests/: transcripts.rs
src/utils/: errors.rs  genomic_relations.rs  mod.rs
tests/data/: attributes.txt  small.fasta  small.fasta.fai
