[package]
name = "atglib"
version = "0.2.0"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "A library to handle transcripts for genomics and transcriptomics"
readme = "README.md"
homepage = "https://github.com/anergictcell/atglib"
repository = "https://github.com/anergictcell/atglib"
license = "MIT"
keywords = ["bioinformatics", "genomics", "transcriptomics", "transcript", "genetics"]
categories = ["science", "data-structures", "parser-implementations"]

[dependencies]
# See https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372 for why we pin serde
serde = { version = "1.0.156, < 1.0.172", features = ["derive"] }
log = "0.4"

[features]
with-bench = []