[package]
name = "atglib"
version = "0.2.1"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "A library to handle transcripts for genomics and transcriptomics"
readme = "README.md"
homepage = "https://github.com/anergictcell/atglib"
repository = "https://github.com/anergictcell/atglib"
license = "MIT"
keywords = ["bioinformatics", "genomics", "transcriptomics", "transcript", "genetics"]
categories = ["science", "data-structures", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"


[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "genepred"
harness = false
